--- a/trekants-beregner/public/index.html
+++ b/trekants-beregner/public/index.html
@@ -8,10 +8,37 @@
       integrity="sha256-Pg1di+fBF53Rbh9oZR/FeD1xsFzTLC963lcac1D0ias="
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
     <title>p5js</title>
   </head>
   <body>
+    <div>
+      <label for="linje_a">linje a</label>
+      <input type="number" id="a" name="linje_a" class="inp"/>
+    </div>
+    <div>
+      <label for="linje_b">linje b</label>
+      <input type="number" id="b" name="linje_b" class="inp"/>
+    </div>
+    <div>
+      <label for="linje_c">linje c</label>
+      <input type="number" id="c" name="linje_c" class="inp"/>
+    </div>
+    <div>
+      <label for="vinkel_A">vinkel A</label>
+      <input type="number" id="A" name="vinkel_A" class="inp"/>
+    </div>
+    <div>
+      <label for="vinkel_B">vinkel B</label>
+      <input type="number" id="B" name="vinkel_B" class="inp"/>
+    </div>
+    <div>
+      <label for="vinkel_C">vinkel C</label>
+      <input type="number" id="C" name="vinkel_C" class="inp"/>
+    </div>
+    <div>
+      <input type="button" value="Udregn">
+    </div>
     <script src="./dist/main.js"></script>
   </body>
 </html>
