--- a/trekants-beregner/public/index.html
+++ b/trekants-beregner/public/index.html
@@ -37,7 +37,7 @@
       <input type="number" id="C" name="vinkel_C" class="inp"/>
     </div>
     <div>
-      <input type="button" value="Udregn">
+      <input type="button" id="submit" value="Udregn">
     </div>
     <script src="./dist/main.js"></script>
   </body>
