--- a/trekants-beregner/public/index.html
+++ b/trekants-beregner/public/index.html
@@ -39,6 +39,9 @@
     <div>
       <input type="button" id="submit" value="Udregn">
     </div>
+    <div>
+      <input type="button" id="reset" value="Reset">
+    </div>
     <script src="./dist/main.js"></script>
   </body>
 </html>
