--- a/trekants-beregner/public/index.html
+++ b/trekants-beregner/public/index.html
@@ -12,7 +12,7 @@
     <title>p5js</title>
   </head>
   <body>
-    <div>
+    <!-- <div>
       <label for="linje_a">linje a</label>
       <input type="number" id="a" name="linje_a" class="inp"/>
     </div>
@@ -35,7 +35,7 @@
     <div>
       <label for="vinkel_C">vinkel C</label>
       <input type="number" id="C" name="vinkel_C" class="inp"/>
-    </div>
+    </div> -->
     <div>
       <input type="button" id="submit" value="Udregn">
     </div>
