--- a/trekants-beregner/public/index.html
+++ b/trekants-beregner/public/index.html
@@ -42,6 +42,9 @@
     <div>
       <input type="button" id="reset" value="Reset">
     </div>
+    <div>
+      <p id="output"></p>
+    </div>
     <script src="./dist/main.js"></script>
   </body>
 </html>
