--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Mine HTX programmerings ting</h1>
     <a href="./trekants-beregner/public/index.html">Trekants beregner</a>
+    <a href="./fake-news-site/public/index.html">Fake news generator</a>
 </body>
 </html>
