Added balls to index

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>Mine HTX programmerings ting</h1>
     <a href="./trekants-beregner/public/index.html">Trekants beregner</a>
     <a href="./fake-news-site/public/index.html">Fake news generator</a>
+    <a href="./balls/index.html">Balls</a>
 </body>
 </html>
