--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css" />
     <title>HTX Prog</title>
 </head>
 <body>
@@ -12,5 +13,7 @@
     <a href="./trekants-beregner/public/index.html">Trekants beregner</a>
     <a href="./fake-news-site/public/index.html">Fake news generator</a>
     <a href="./balls/index.html">Balls</a>
+
+    <a class="github-fork-ribbon" href="https://github.com/DenseOriginal/htxprog" data-ribbon="Source code on GitHub" title="Source code on GitHub">Source code on GitHub</a>
 </body>
 </html>
