--- a/trekants-beregner/public/index.html
+++ b/trekants-beregner/public/index.html
@@ -36,14 +36,16 @@
       <label for="vinkel_C">vinkel C</label>
       <input type="number" id="C" name="vinkel_C" class="inp"/>
     </div> -->
-    <div>
-      <input type="button" id="submit" value="Udregn">
-    </div>
-    <div>
-      <input type="button" id="reset" value="Reset">
-    </div>
-    <div>
-      <p id="output"></p>
+    <div id="input-fields">
+      <div>
+        <input type="button" id="submit" value="Udregn">
+      </div>
+      <div>
+        <input type="button" id="reset" value="Reset">
+      </div>
+      <div>
+        <p id="output"></p>
+      </div>
     </div>
     <script src="./dist/main.js"></script>
   </body>
