--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <a href="./trekants-beregner/public/index.html">Trekants beregner</a>
     <a href="./fake-news-site/public/index.html">Fake news generator</a>
     <a href="./balls/index.html">Balls</a>
+    <a href="./Fysik-Brydning/index.html">Fysik Bølge reklefsion og brydning</a>
 
     <a class="github-fork-ribbon" href="https://github.com/DenseOriginal/htxprog" data-ribbon="Source code on GitHub" title="Source code on GitHub">Source code on GitHub</a>
 </body>
