Wrote more shit

--- a/Fysik-Brydning/public/index.html
+++ b/Fysik-Brydning/public/index.html
@@ -12,6 +12,17 @@
     <title>p5js</title>
   </head>
   <body>
+    <div class="input">
+      <label for="upper">
+        Øverste brydnings indeks
+        <input type="number" name="upper" id="upper" value="1">
+      </label>
+
+      <label for="lower">
+        Nederste brydnings indeks
+        <input type="number" name="lower" id="lower" value="1.33">
+      </label>
+    </div>
     <script src="./dist/main.js"></script>
   </body>
 </html>
