--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
     <a href="./trekants-beregner/public/index.html">Trekants beregner</a>
     <a href="./fake-news-site/public/index.html">Fake news generator</a>
     <a href="./balls/index.html">Balls</a>
-    <a href="./Fysik-Brydning/public/index.html">Fysik Bølge reklefsion og brydning</a>
+
+    <br>
+    <h2>Fysik bølger</h2>
+    <a href="./Fysik-Brydning/public/index.html">Refleksion og brydning</a>
+    <a href="./fysik-bølger/model/index.html">Bølge model</a>
+    <a href="./fysik-bølger/interferens/index.html">Interferens model</a>
+
+    <a href="https://editor.p5js.org/DenseOriginal/sketches" class="footnote">Flere tilfældige ting her</a>
 
     <a class="github-fork-ribbon" href="https://github.com/DenseOriginal/htxprog" data-ribbon="Source code on GitHub" title="Source code on GitHub">Source code on GitHub</a>
 </body>
