--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <a href="./trekants-beregner/public/index.html">Trekants beregner</a>
     <a href="./fake-news-site/public/index.html">Fake news generator</a>
     <a href="./balls/index.html">Balls</a>
+    <a href="./Plane-Generator/public/">Plan Genrator</a>
+    <a href="./Circle-Maker/public/">Circle program</a>
+    <a href="./Computer-Basics/public/">Computer Basics</a>
 
     <br>
     <h2>Fysik bølger</h2>
