--- a/Circle-Maker/public/index.html
+++ b/Circle-Maker/public/index.html
@@ -12,6 +12,8 @@
     <title>p5js</title>
   </head>
   <body>
+
+    <button id="switch">Skift</button>
     <script src="./dist/main.js"></script>
   </body>
 </html>
