--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <a href="./Plane-Generator/public/">Plan Genrator</a>
     <a href="./Circle-Maker/public/">Circle program</a>
     <a href="./Computer-Basics/public/">Computer Basics</a>
+    <a href="./Funktion-spil/public/">Funktions Spil</a>
 
     <br>
     <h2>Fysik bølger</h2>
