Added link to GUI-basic

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <a href="./Circle-Maker/public/">Circle program</a>
     <a href="./Computer-Basics/public/">Computer Basics</a>
     <a href="./Funktion-spil/public/">Funktions Spil</a>
+    <a href="./GUI-basic/public/index.html">Paint5.js</a>
 
     <br>
     <h2>Fysik bølger</h2>
