Added more entries

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <a href="./Computer-Basics/public/">Computer Basics</a>
     <a href="./Funktion-spil/public/">Funktions Spil</a>
     <a href="./GUI-basic/public/index.html">Paint5.js</a>
+    <a href="./trigonometri/index.html">Enheds Cirkel</a>
+    <a href="./julelys/index.html">Julelys</a>
+    <a href="./smart-rockets/public/">Smart Rockets</a>
+
+    <br>
+    <details>
+        <summary>Lyd</summary>
+        <a href="./lyd-part1/">Lyd Part 1</a>
+    </details>
 
     <br>
     <h2>Fysik bølger</h2>
