Addded car game

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <a href="./trigonometri/index.html">Enheds Cirkel</a>
     <a href="./julelys/index.html">Julelys</a>
     <a href="./smart-rockets/public/">Smart Rockets</a>
+    <a href="./car/index.html">Bil Spil</a>
 
     <br>
     <details>
