--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <details>
         <summary>Lyd</summary>
         <a href="./lyd-part1/">Lyd Part 1</a>
+        <a href="./lyd-spil/public/index.html">Lyd Spil</a>
     </details>
 
     <br>
