--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <summary>Lyd</summary>
         <a href="./lyd-part1/">Lyd Part 1</a>
         <a href="./lyd-spil/public/index.html">Lyd Spil</a>
+        <a href="./lyd-drumpad/index.html">Lyd Drumpad</a>
     </details>
 
     <br>
