--- a/lyd-drumpad/index.html
+++ b/lyd-drumpad/index.html
@@ -14,6 +14,7 @@
   <div id="container" class="container">
     
   </div>
+  <script src="./classes.js"></script>
   <script src="./app.js"></script>
 </body>
 </html>
