--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         <a href="./lyd-part1/">Lyd Part 1</a>
         <a href="./lyd-spil/public/index.html">Lyd Spil</a>
         <a href="./lyd-drumpad/index.html">Lyd Drumpad</a>
+        <a href="./lyd-spy-recorder/">Spy Recorder</a>
+        <a href="./speech-rec/">Speech Recognition</a>
     </details>
 
     <br>
