Add death message

--- a/Funktion-spil/public/index.html
+++ b/Funktion-spil/public/index.html
@@ -12,6 +12,7 @@
     <title>p5js</title>
   </head>
   <body>
+    <p id="message"></p>
     <script src="./dist/main.js"></script>
   </body>
 </html>
