--- a/Funktion-spil/public/index.html
+++ b/Funktion-spil/public/index.html
@@ -12,7 +12,12 @@
     <title>p5js</title>
   </head>
   <body>
-    <p id="message"></p>
+    <div id="game-over" hidden>
+      <p class="title">You died dumbass...</p>
+      <p id="score-container">Score: <span id="score"></span></p>
+      <!-- Reload page on click -->
+      <a href="javascript:location.reload();">Retry</a>
+    </div>
     <script src="./dist/main.js"></script>
   </body>
 </html>
