Added better scoring

--- a/Funktion-spil/public/index.html
+++ b/Funktion-spil/public/index.html
@@ -14,7 +14,8 @@
   <body>
     <div id="game-over" hidden>
       <p class="title">You died dumbass...</p>
-      <p id="score-container">Score: <span id="score"></span></p>
+      <p >Score: <span id="score"></span></p>
+      <p >Highscore: <span id="highscore"></span></p>
       <!-- Reload page on click -->
       <a href="javascript:location.reload();">Retry</a>
     </div>
