Added link to fantistiske funktioner

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <a href="./julelys/index.html">Julelys</a>
     <a href="./smart-rockets/public/">Smart Rockets</a>
     <a href="./car/index.html">Bil Spil</a>
+    <a href="https://fantastiske-funktioner.netlify.app/">Fantastiske funktioner</a>
 
     <br>
     <details>
