Add ligning stuff to homepage

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <a href="./smart-rockets/public/">Smart Rockets</a>
     <a href="./car/index.html">Bil Spil</a>
     <a href="https://fantastiske-funktioner.netlify.app/">Fantastiske funktioner</a>
+    <a href="./ligning-stuff/public/">Lignings udregnes</a>
 
     <br>
     <details>
