Add ugly website

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <a href="./car/index.html">Bil Spil</a>
     <a href="https://fantastiske-funktioner.netlify.app/">Fantastiske funktioner</a>
     <a href="./ligning-stuff/public/">Lignings udregnes</a>
+    <a href="./ugly-website/index.html">Min grimme hjemmeside</a>
 
     <br>
     <details>
