Add link to netwons method

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <a href="https://fantastiske-funktioner.netlify.app/">Fantastiske funktioner</a>
     <a href="./ligning-stuff/public/">Lignings udregnes</a>
     <a href="./ugly-website/index.html">Min grimme hjemmeside</a>
+    <a href="./newtons-method/public/index.html">Newtons metode</a>
 
     <br>
     <details>
