--- a/newtons-method/public/index.html
+++ b/newtons-method/public/index.html
@@ -12,6 +12,15 @@
     <title>p5js</title>
   </head>
   <body>
+    <div class="inputs">
+      <div class="row">
+        <input type="text" id="equation" placeholder="Funktion">
+      </div>
+      <div class="row">
+        <input type="text" id="x-nul" placeholder="X_0">
+        <button id="solveButton">Solve</button>
+      </div>
+    </div>
     <script src="./dist/main.js"></script>
   </body>
 </html>
